--- a/css/mobirise/style.css
+++ b/css/mobirise/style.css
@@ -1825,7 +1825,7 @@ html {
 }
 .mbr-buttons__btn,
 .mbr-buttons__link {
-  margin: 0 10px 13px 0;
+  margin: 0 0px 13px 0;
 }
 .mbr-buttons__btn,
 .mbr-buttons__link,
