--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -27,6 +27,7 @@ p
 {
 	
 	font-weight:bold;
+	background-color: rgba(255,255,255,1) !important;
 	
 	
 }
@@ -34,6 +35,7 @@ p
 {
 	text-color: #c39212;
 	border-bottom:3px solid #c39212;
+	background-color: rgba(255,255,255,1);
 	
 }
 
@@ -195,8 +197,9 @@ footer
 .btn--align-right
 {
 
-	position:absolute;
-	right:0px;
-	margin-right:0px;
+	float:right;
+	margin:0 0 13 0;
+
 	
+
 }
